# hdc-sql-on-fhir

./: README.md  pyproject.toml
docs/: sql-on-fhir.archimate
test/: test-examples-ndjson.ipynb
